# lattice

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  README.md  commente.me  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
docs/: landing-prompt.md
native/: build.sh  smc.c
scripts/: postbuild.mjs  setup-sudoers.sh
src/: app.tsx  bootstrap.ts  chat.ts  cli.tsx  config.ts  format.ts  icons.ts  theme.ts
src/collectors/: disks.ts  git.ts  gpu.ts  huggingface.ts  power.ts  sensors.ts  system.ts  tokens.ts  types.ts  vtex.ts  zgit.ts
src/commenteme/: __init__.py  app.py  chat.py  cli.py  icons.py  theme.py  widgets.py
src/commenteme/collectors/: __init__.py  gpu.py  power.py  sensors.py  system.py  tokens.py  vtex.py
src/components/: LanguageSelect.tsx  Panel.tsx
src/i18n/: en.ts  es.ts  index.ts  pt-BR.ts
