[project]
name = "commenteme"
version = "0.1.0"
description = "commente.me — dashboard de sistema, GPU e energia em tempo real no terminal (Apple Silicon)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=6.1.0",
    "textual>=0.80.0",
    "anthropic>=0.40.0",
]

[project.scripts]
commenteme = "commenteme.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
